# xfep-sign

./: .gitignore  README.md  pyproject.toml
src/xfep/sign/: __init__.py  certificate.py  signer.py
tests/: conftest.py  test_certificate.py  test_signer.py
