[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfep-sign"
version = "0.1.0"
description = "Firma digital XMLDSig para Facturación Electrónica Perú"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=43.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xfep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
